--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bg-color.css">
     <title>Git init</title>
 </head>
 <body>
     <h1>Git init</h1>
+    <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
