--- a/index.html
+++ b/index.html
@@ -3,12 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="bg-color.css">
+    <link rel="stylesheet" href="/style.css">
+    
     <title>Git init</title>
 </head>
 <body>
-    <h1>Git init</h1>
-    <p>Lorem ipsum dolor sit amet.</p>
+
+    <div class="center-body">
+        <form action="#">
+            <div class="form-group">
+                <label for="title">Titre</label>
+                <input type="text" name="title" id="title">
+            </div>
+            <div class="form-group">
+                <label for="description">Description</label>
+                <textarea rows="5" type="text" name="description" id="description"></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-save">Enregistrer</button>
+        </form>
+    </div>
+
+    <div class="center-body ff card-wrapper">
+        <h1>Article list</h1>
+        <p>Empty list</p>
+        <div class="cards-grid">
+            <div class="card">
+                <div class="card-actions">
+                    <div class="action delete"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#fff" viewBox="0 0 256 256"><path d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"></path></svg></div>
+                    <div class="action update"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#fff" viewBox="0 0 256 256"><path d="M227.32,73.37,182.63,28.69a16,16,0,0,0-22.63,0L36.69,152A15.86,15.86,0,0,0,32,163.31V208a16,16,0,0,0,16,16H216a8,8,0,0,0,0-16H115.32l112-112A16,16,0,0,0,227.32,73.37ZM92.69,208H48V163.31l88-88L180.69,120ZM192,108.69,147.32,64l24-24L216,84.69Z"></path></svg></div>
+                </div>
+                <div class="card-wrapper">
+                    <span>#0</span>
+                    <h1 class="title">My title</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, commodi facilis numquam facere magnam deleniti!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="/app.js"></script>
 </body>
 </html>
