--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
 
     <div class="center-body">
+        <div id="app">
+        </div>
+    </div>
+
+    <!-- <div class="center-body">
         <form action="#">
             <div class="form-group">
                 <label for="title">Titre</label>
@@ -40,9 +45,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <script src="/app.js"></script>
+    <script src="/class.js"></script>
 </body>
 </html>
